@@ -15,6 +15,7 @@ v1.0 - Pending
 	+ Pref to play enqueued items on activate (enter/double-click)
 	+ Play friendler with other clients for shuffle/repeat/crossfade
 	+ Reduced startup time/memory usage
+	+ Use command_list_* for increased responsiveness of batch commands
 	+ Use curly brackets {} to have formatting appear only if all enclosed
 	  tags are available
 	+ Ability to run on OLPC's Sugar user environment (Owen)
